FinalCif recent changes
-----------------------
* v140 Improved support for SQUEEZEd structures. New 'refinement_gui' keyword for report templates available.
       Fixed sum formula parsing. Some forulae were displayed incorrectly.
* v139 Fixed crash on Mac with report template. New report template attribute for hydrogen atoms available.
* v138 Validators for loop values were added. Incorrect loop values turn the input field red and changed values are gray now.
       Faster loading of large CIF files. The warning about inconsistent temperatures from different files was improved.
       Empty loop values could not be overwritten by a dot. This has been fixed. Loops in the saved CIF are now aligned.
       Report templates can use reference counting for references now. Creation of the bibliography in the report templates
       has been improved.
* v137 Validators for manually inserted numerical values were added. HTML templates are now possible for reports.
       Local CheckCif does not crash FinalCif anymore if the platon executable isn't found.
* v136 Fix crash when adding authors to the CIF.
* v135 Fix crash if templates are exported with no CIF loaded.
* v134 No symmetry codes for atoms were displayed in the table with the bond angles. This has been fixed.
* v133 Improved handling of wrong passwords in COD deposition page. Possible crash fixed.
* v132 Startup speed improved a bit. Selection of main table rows improved.
* v131 Added an edit button to main table text fields so that the text templates can be reached easier.
* v130 Improved handling of reports from templates. All CIF blocks from a multi-CIF are now accessible in a template.
       Also, all atoms, bonds and angles are accessible. Refer to the manual for details.
* v129 Improved program executable which can now be pinned to the taskbar. Updated updater executable.
* v128 Added import popup-Window for the import of an additional CIF for selection of keys and loops to import.