@@ -4082,7 +4082,7 @@ please add a publication author:</string>
          </widget>
         </item>
         <item row="0" column="1">
-         <widget class="QComboBox" name="datanameComboBox">
+         <widget class="ComboBoxWithContextMenu" name="datanameComboBox">
           <property name="editable">
            <bool>true</bool>
           </property>
@@ -4293,6 +4293,11 @@ please add a publication author:</string>
    <class>QCodeEditor</class>
    <extends>QPlainTextEdit</extends>
    <header>finalcif.gui.file_editor.h</header>
+  </customwidget>
+ <customwidget>
+   <class>ComboBoxWithContextMenu</class>
+   <extends>QComboBox</extends>
+   <header>finalcif.gui.block_combobox.h</header>
   </customwidget>
  </customwidgets>
  <tabstops>
